--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bubble_tab_indicator: "^0.1.5"
 
 
   # The following adds the Cupertino Icons font to your application.
